RESOLVED FIXED 253538
[popover] Throw exception when calling dialog.show() on an open popover
https://bugs.webkit.org/show_bug.cgi?id=253538
Summary [popover] Throw exception when calling dialog.show() on an open popover
Tim Nguyen (:ntim)
Reported 2023-03-07 15:11:51 PST
according to spec.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-07 15:12:15 PST
Tim Nguyen (:ntim)
Comment 2 2023-03-07 15:51:14 PST
EWS
Comment 3 2023-03-07 18:39:42 PST
Committed 261351@main (af0daf6f720f): <https://commits.webkit.org/261351@main> Reviewed commits have been landed. Closing PR #11199 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.