[popover] Throw exception when calling dialog.show() on an open popover https://bugs.webkit.org/show_bug.cgi?id=253538 rdar://106383178

Reviewed by Cameron McCormack.

https://html.spec.whatwg.org/multipage/interactive-elements.html#dom-dialog-show

* LayoutTests/imported/w3c/web-platform-tests/html/semantics/popovers/popover-top-layer-combinations-expected.txt:
* Source/WebCore/html/HTMLDialogElement.cpp:
(WebCore::HTMLDialogElement::show):
(WebCore::HTMLDialogElement::showModal):
* Source/WebCore/html/HTMLDialogElement.h:

Canonical link: https://commits.webkit.org/261351@main