Source/WebCore/html/HTMLDialogElement.h
@@ -39,7 +39,7 @@ public:
     const String& returnValue() const { return m_returnValue; }
     void setReturnValue(String&& value) { m_returnValue = WTFMove(value); }
 
-    void show();
+    ExceptionOr<void> show();
     ExceptionOr<void> showModal();
     void close(const String&);
 
